--- a/quarkus-3.15/pom.xml
+++ b/quarkus-3.15/pom.xml
@@ -18,7 +18,7 @@
 
     <properties>
         <!-- latest Quarkus version -->
-        <quarkus.version>3.15.4</quarkus.version>
+        <quarkus.version>3.15.5</quarkus.version>
 
         <!-- Quarkus >= 3.2 requires Java 17, at least for its maven plugin -->
         <java.release>17</java.release>
@@ -86,8 +86,8 @@
         <jackson-2-version>2.17.2</jackson-2-version>
         <jackson-bom.version>2.17.2</jackson-bom.version>
 
-        <infinispan.version>15.0.11.Final</infinispan.version>
-        <hibernate.version>6.6.7.Final</hibernate.version>
+        <infinispan.version>15.0.14.Final</infinispan.version>
+        <hibernate.version>6.6.13.Final</hibernate.version>
 
         <!-- Hibernate 7.0.0.Alpha5 is a compatible implementation for Bean Validation 3.0 (EE9/EE10) -->
         <jakarta.validation.version>3.0.2</jakarta.validation.version>
@@ -460,18 +460,7 @@
                 </dependency>
                 <dependency>
                     <groupId>org.infinispan</groupId>
-                    <artifactId>infinispan-core</artifactId>
-                    <version>${infinispan.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <groupId>org.jboss.logging</groupId>
-                            <artifactId>jboss-logging</artifactId>
-                        </exclusion>
-                    </exclusions>
-                </dependency>
-                <dependency>
-                    <groupId>org.infinispan</groupId>
-                    <artifactId>infinispan-jcache</artifactId>
+                    <artifactId>infinispan-api</artifactId>
                     <version>${infinispan.version}</version>
                 </dependency>
                 <dependency>
