--- a/quarkus-3.18/pom.xml
+++ b/quarkus-3.18/pom.xml
@@ -448,18 +448,7 @@
                 </dependency>
                 <dependency>
                     <groupId>org.infinispan</groupId>
-                    <artifactId>infinispan-core</artifactId>
-                    <version>${infinispan.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <groupId>org.jboss.logging</groupId>
-                            <artifactId>jboss-logging</artifactId>
-                        </exclusion>
-                    </exclusions>
-                </dependency>
-                <dependency>
-                    <groupId>org.infinispan</groupId>
-                    <artifactId>infinispan-jcache</artifactId>
+                    <artifactId>infinispan-api</artifactId>
                     <version>${infinispan.version}</version>
                 </dependency>
                 <dependency>
