--- a/quarkus-3.20/pom.xml
+++ b/quarkus-3.20/pom.xml
@@ -18,7 +18,7 @@
 
     <properties>
         <!-- latest Quarkus version -->
-        <quarkus.version>3.20.0</quarkus.version>
+        <quarkus.version>3.20.1</quarkus.version>
 
         <!-- Quarkus >= 3.2 requires Java 17, at least for its maven plugin -->
         <java.release>17</java.release>
@@ -46,18 +46,18 @@
         <!-- mp.reactive-messaging classes included in smallrye.reactive-messaging, no dependency on upstream API -->
         <mp.reactive-streams-operators.version>3.0.1</mp.reactive-streams-operators.version>
         <mp.rest-client.version>4.0</mp.rest-client.version>
-        <smallrye.common.version>2.10.0</smallrye.common.version>
+        <smallrye.common.version>2.12.0</smallrye.common.version>
         <smallrye.config.version>3.11.4</smallrye.config.version>
-        <smallrye.context-propagation.version>2.2.0</smallrye.context-propagation.version>
+        <smallrye.context-propagation.version>2.2.1</smallrye.context-propagation.version>
         <smallrye.fault-tolerance.version>6.9.0</smallrye.fault-tolerance.version>
-        <smallrye.graphql.version>2.12.1</smallrye.graphql.version>
+        <smallrye.graphql.version>2.12.2</smallrye.graphql.version>
         <smallrye.health.version>4.2.0</smallrye.health.version>
-        <smallrye.jandex.version>3.2.7</smallrye.jandex.version>
+        <smallrye.jandex.version>3.3.0</smallrye.jandex.version>
         <smallrye.jwt.version>4.6.1</smallrye.jwt.version>
         <smallrye.metrics.version>4.0.0</smallrye.metrics.version>
-        <smallrye.openapi.version>4.0.8</smallrye.openapi.version>
+        <smallrye.openapi.version>4.0.10</smallrye.openapi.version>
         <smallrye.reactive-attribute-processor.version>4.27.0</smallrye.reactive-attribute-processor.version>
-        <smallrye.reactive-converter-api.version>3.0.1</smallrye.reactive-converter-api.version>
+        <smallrye.reactive-converter-api.version>3.0.3</smallrye.reactive-converter-api.version>
         <smallrye.reactive-messaging.version>4.27.0</smallrye.reactive-messaging.version>
         <smallrye.reactive-streams-operators.version>1.0.13</smallrye.reactive-streams-operators.version>
         <smallrye.mutiny.reactive-streams-operators.version>2.8.0</smallrye.mutiny.reactive-streams-operators.version>
@@ -85,7 +85,7 @@
         <jackson-bom.version>2.18.2</jackson-bom.version>
 
         <infinispan.version>15.0.14.Final</infinispan.version>
-        <hibernate.version>6.6.11.Final</hibernate.version>
+        <hibernate.version>6.6.13.Final</hibernate.version>
 
         <!-- Hibernate 7.0.0.Alpha5 is a compatible implementation for Bean Validation 3.0 (EE9/EE10) -->
         <jakarta.validation.version>3.0.2</jakarta.validation.version>
@@ -93,7 +93,8 @@
         <!-- ojdbc version in the quarkus-jdbc-oracle extension -->
         <oracle.ojdbc.version>23.6.0.24.10</oracle.ojdbc.version>
         <!-- kafka version in the kafka extensions -->
-        <kafka.version>3.9.0</kafka.version>
+        <!-- overridden from 3.9.0 to mitigate a vulnerability -->
+        <kafka.version>3.9.1</kafka.version>
 
         <!-- Quarkus x.y uses Quarkus ARC x.y (based on CDI 4.1) -->
         <jakarta.inject.version>2.0.1</jakarta.inject.version>
@@ -105,17 +106,27 @@
         <byte-buddy.version>1.15.11</byte-buddy.version>
 
         <!-- it seems that the quarkus testing integration works best using the junit mentioned in the quarkus BOM -->
-        <junit.jupiter.version>5.10.5</junit.jupiter.version>
-        <junit.platform.version>1.10.5</junit.platform.version>
+        <junit.jupiter.version>5.12.1</junit.jupiter.version>
+        <junit.platform.version>1.12.1</junit.platform.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-            <!-- Must include Bouncy Castle before the Quarkus BOM to make sure the latest version is not overridden -->
+            <!-- Must include explicit dependencies before the Quarkus BOM to make sure the latest version is not overridden -->
             <dependency>
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcprov-jdk18on</artifactId>
                 <version>${bouncycastle.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-clients</artifactId>
+                <version>${kafka.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${postgresql.version}</version>
             </dependency>
 
             <!-- Quarkus BOM -->
@@ -448,18 +459,7 @@
                 </dependency>
                 <dependency>
                     <groupId>org.infinispan</groupId>
-                    <artifactId>infinispan-core</artifactId>
-                    <version>${infinispan.version}</version>
-                    <exclusions>
-                        <exclusion>
-                            <groupId>org.jboss.logging</groupId>
-                            <artifactId>jboss-logging</artifactId>
-                        </exclusion>
-                    </exclusions>
-                </dependency>
-                <dependency>
-                    <groupId>org.infinispan</groupId>
-                    <artifactId>infinispan-jcache</artifactId>
+                    <artifactId>infinispan-api</artifactId>
                     <version>${infinispan.version}</version>
                 </dependency>
                 <dependency>
