--- a/update-checker/pom.xml
+++ b/update-checker/pom.xml
@@ -87,7 +87,7 @@
                                     <!-- 3.0.57+ are broken: https://github.com/swagger-api/swagger-codegen-generators/issues/1295 -->
                                     <ignoreVersion>
                                         <type>regex</type>
-                                        <version>3\.0\.(5[7-9]|6[0-9])</version>
+                                        <version>3\.0\.(5[7-9]|6[0-9]|7[0-1])</version>
                                     </ignoreVersion>
                                 </ignoreVersions>
                             </rule>
